--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,16 +1,13 @@
 title: generic-scratch-paint-new-backdrop
 hero_image: images/banner.png
 description: generic-scratch-paint-new-backdrop description
-theme: red # possible values: blue, green, navy, orange, red, turquoise, violet, yellow
-duration: 2 # possible values: 1, 2 or 3
+theme: cc-prototype 
+duration: 1 
 listed: false
-ingredient: false
+ingredient: true
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
-interests: "animals, big-project, art and design, jokes/pranks, space, photography, nature/outside/weather, music/sound, physical computing, games, robots, geography"
-technologies: "electronics, sense-hat, physical computing, html/css, scratch, python"
-site_areas:
+interests: 
+technologies: "scratch"
 steps:
-  - title: Introduction
-  - title: What you will need
-  - title: Step title
+  - title: Paint a new backdrop
+  
