--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
-title: generic-scratch-paint-new-backdrop
+title: Paint a new backdrop
 hero_image: images/banner.png
-description: generic-scratch-paint-new-backdrop description
+description: Scratch Paint a new backdrop
 theme: cc-prototype 
 duration: 1 
 listed: false
