--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
-title: Paint a new backdrop
+title: Paint a new Scratch backdrop
 hero_image: images/banner.png
-description: Scratch Paint a new backdrop
+description: How to paint a new Scratch backdrop
 theme: cc-prototype 
 duration: 1 
 listed: false
