--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,7 +5,7 @@ theme: cc-prototype
 duration: 1 
 listed: false
 ingredient: true
-copyedit: false
+copyedit: true
 interests: 
 technologies: "scratch"
 steps:
